docs/apache-airflow-providers-amazon/8.1.0/_sources/_api/airflow/providers/amazon/aws/hooks/glue_catalog/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.hooks.glue_catalog`
=========================================================

.. py:module:: airflow.providers.amazon.aws.hooks.glue_catalog

.. autoapi-nested-parse::

   This module contains AWS Glue Catalog Hook



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.glue_catalog.GlueCatalogHook




.. py:class:: GlueCatalogHook(*args, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`

   Interact with AWS Glue Data Catalog.
   Provide thin wrapper around :external+boto3:py:class:`boto3.client("glue") <Glue.Client>`.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`
       - `AWS Glue Data Catalog         <https://docs.aws.amazon.com/glue/latest/dg/components-overview.html#data-catalog-intro>`__

   .. py:method:: get_partitions(database_name, table_name, expression = '', page_size = None, max_items = None)

      Retrieves the partition values for a table.

      .. seealso::
          - :external+boto3:py:class:`Glue.Paginator.GetPartitions`

      :param database_name: The name of the catalog database where the partitions reside.
      :param table_name: The name of the partitions' table.
      :param expression: An expression filtering the partitions to be returned.
          Please see official AWS documentation for further information.
          https://docs.aws.amazon.com/glue/latest/dg/aws-glue-api-catalog-partitions.html#aws-glue-api-catalog-partitions-GetPartitions
      :param page_size: pagination size
      :param max_items: maximum items to return
      :return: set of partition values where each value is a tuple since
          a partition may be composed of multiple columns. For example:
          ``{('2018-01-01','1'), ('2018-01-01','2')}``


   .. py:method:: check_for_partition(database_name, table_name, expression)

      Checks whether a partition exists

      .. code-block:: python

          hook = GlueCatalogHook()
          t = "static_babynames_partitioned"
          hook.check_for_partition("airflow", t, "ds='2015-01-01'")

      :param database_name: Name of hive database (schema) @table belongs to
      :param table_name: Name of hive table @partition belongs to
      :expression: Expression that matches the partitions to check for, e.g.: ``a = 'b' AND c = 'd'``


   .. py:method:: get_table(database_name, table_name)

      Get the information of the table

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.get_table`

      .. code-block:: python

          hook = GlueCatalogHook()
          r = hook.get_table("db", "table_foo")
          r["Name"] = "table_foo"

      :param database_name: Name of hive database (schema) @table belongs to
      :param table_name: Name of hive table


   .. py:method:: get_table_location(database_name, table_name)

      Get the physical location of the table.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.get_table`

      :param database_name: Name of hive database (schema) @table belongs to
      :param table_name: Name of hive table


   .. py:method:: get_partition(database_name, table_name, partition_values)

      Gets a Partition

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.get_partition`

      .. code-block:: python

          hook = GlueCatalogHook()
          partition = hook.get_partition("db", "table", ["string"])
          partition["Values"]

      :param database_name: Database name
      :param table_name: Database's Table name
      :param partition_values: List of utf-8 strings that define the partition
          Please see official AWS documentation for further information.
          https://docs.aws.amazon.com/glue/latest/dg/aws-glue-api-catalog-partitions.html#aws-glue-api-catalog-partitions-GetPartition
      :raises: AirflowException


   .. py:method:: create_partition(database_name, table_name, partition_input)

      Creates a new Partition.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.create_partition`

      .. code-block:: python

          hook = GlueCatalogHook()
          partition_input = {"Values": []}
          hook.create_partition(database_name="db", table_name="table", partition_input=partition_input)

      :param database_name: Database name
      :param table_name: Database's Table name
      :param partition_input: Definition of how the partition is created
          Please see official AWS documentation for further information.
          https://docs.aws.amazon.com/glue/latest/dg/aws-glue-api-catalog-partitions.html#aws-glue-api-catalog-partitions-CreatePartition
      :raises: AirflowException



